--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+.square:before{
+    content: "";
+    display: block;
+    padding-top: 100%;
+    background-color: rgb(141, 141, 141);
+    margin: 1px;
+}
+
+#stepper, .toolbar > li:hover{
+    cursor:pointer;
+}
+
+.bbred3{
+    border-bottom:3px solid rgb(204, 0, 0);
+}
 @charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
